@@ -84,7 +84,7 @@ move rectangle inside another</td></tr>
 
 
 <tr><td><a href=#clamp_ip>clamp_ip</a></td><td> -
-moves the rectangle inside another</td></tr>
+moves the ectangle inside another</td></tr>
 
 
 <tr><td><a href=#clip>clip</a></td><td> -
